syntax = "proto3";

package gnboot;

import "openapiv3/annotations.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "proto/genre.proto";
import "proto/studio.proto";
import "proto/keyword.proto";
import "proto/subtitle.proto";
import "proto/actor.proto";
import "proto/base.proto";

option go_package = "github.com/liluoliluoli/gnboot/api/movie";

option (openapi.v3.document) = {
  info : {title : "movie adaptor";
version : "1.0.0";
description : "This is movie adaptor docs";
}
components : {
security_schemes: {
additional_properties:
  [{
    name:
      "BearerAuth";
    value: {
    security_scheme: {
    type:
      "http";
    scheme:
      "bearer";
    }
    }
  }]
}
}
  security: [
    {
      additional_properties: [
        {
          name: "BearerAuth";
          value: {
            value: []
          }
  }
      ]
      }
  ]
  }
  ;

  service MovieRemoteService {
    // create one Movie record
    rpc CreateMovie(CreateMovieRequest) returns (google.protobuf.Empty) {
      option (google.api.http) = {
        post : "/movie/create"

        body : "*"
      };
    }
    rpc GetMovie(GetMovieRequest) returns (MovieResp) {
      option (google.api.http) = {
        get : "/movie/query/id"
      };
    }
    rpc FindMovie(FindMovieRequest) returns (SearchMovieResp) {
      option (google.api.http) = {
        post : "/movie/query/all"
        body : "*"
      };
    }
    rpc FilterMovie(FilterMovieRequest) returns (SearchMovieResp) {
      option (google.api.http) = {
        post : "/movie/query/filter"
        body : "*"
      };
    }
    rpc NextToPlayMovies(NextToPlayMoviesRequest) returns (SearchMovieResp) {
      option (google.api.http) = {
        post : "/movie/nextToPlay/query/all"
        body : "*"
      };
    }
    rpc UpdateMovie(UpdateMovieRequest) returns (google.protobuf.Empty) {
      option (google.api.http) = {
        put : "/movie/update"
        body : "*",
        additional_bindings {
          patch : "/movie/update",
          body : "*",
        }
      };
    }
    rpc DeleteMovie(IdsRequest) returns (google.protobuf.Empty) {
      option (google.api.http) = {
        delete : "/movie/delete"
      };
    }
  }

  message MovieResp {
    int64 id = 1;
    string originalTitle = 2;
    string status = 3;
    float voteAverage = 4;
    int32 voteCount = 5;
    string country = 6;
    string trailer = 7;
    string url = 8;
    bool downloaded = 9;
    int32 fileSize = 10;
    string filename = 11;
    string ext = 12;
    repeated gnboot.GenreResp genres = 13;
    repeated gnboot.StudioResp studios = 14;
    repeated gnboot.KeywordResp keywords = 15;
    int32 lastPlayedPosition = 16;
    string lastPlayedTime = 17;
    repeated gnboot.SubtitleResp subtitles = 18;
    repeated gnboot.ActorResp actors = 19;
  }

  message CreateMovieRequest {
    string name = 1 [ (google.api.field_behavior) = REQUIRED ];
  }

  message FindMovieRequest {
    Page page = 1;
    optional string search = 2;
    optional Sort sort = 3;
  }

  message SearchMovieResp {
    Page page = 1;
    repeated MovieResp list = 2;
  }

  message FilterMovieRequest {
    Page page = 1;
    int64 id = 2;
    string type = 3;
  }

message NextToPlayMoviesRequest {
  Page page = 1;
}

  message GetMovieRequest {
    int64 id = 1;
  }

  message UpdateMovieRequest {
    int64 id = 1 [ (google.api.field_behavior) = REQUIRED ];
    optional string name = 2;
  }
